# MINDORA

./: .gitignore  IA EDUCATIVA OFFLINE.pages  INSTALL.md  PRACTICA2_README.md  QUICK_START.md  README.md  README_COMPLETO.md  RESUMEN_FINAL.md  TEST_REPORT.md  build.sh  install.sh  make_readme_pdf.py  mejoras2.docx
.github/: INSTALLATION_GUIDE.md
.github/workflows/: build-linux.yml  build-windows.yml
core/: README.md  bulk_ingest_temario.py  pyinstaller.spec  pyinstaller_linux.spec  pyinstaller_windows.spec  requirements-finetune.txt  requirements.txt  run_server.py  test_temario_qa.py  train_lora.py
core/app/: main.py
core/app/api/: router.py
core/app/schemas/: ask.py  assistant.py  branch.py  documents.py  documents_list.py  exams.py  query.py  study.py
core/app/services/: chat_memory.py  chunking.py  embeddings.py  exam_validator.py  exams.py  fine_tuning.py  index.py  ingest.py  intent_dictionary.py  langchain_orchestrator.py  llm.py  query.py  study.py  style_preferences.py  text_extract.py  topic_catalog.py
core/app/storage/: branches.py  config.py  database.py  models.py
core/tests/: conftest.py  test_exam_topics.py  test_integration.py  test_intent_dictionary.py  test_reranker.py  test_simulation.py  test_study.py
core/tests/fixtures/: fisica.txt  matematicas.txt  programacion.txt
demo/: streamlit_app.py
ui/: README.md  index.html  package-lock.json  package.json
ui/src/: App.tsx  api.ts  styles.css  types.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: main.rs
(+8 files in other folders)
