[package]
name = "ia_educativa_offline"
version = "1.0.0"
description = "MINDORA — IA Educativa Offline"
authors = ["MINDORA"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.7", features = ["shell-execute", "shell-open", "path-all", "dialog-all", "fs-read-dir"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
